--- a/style.css
+++ b/style.css
@@ -12,16 +12,19 @@ body{
     size: 3rem;
     line-height: 1.5;
 }
-
+#container-fluid{
+    padding: 3% 9%;
+}
 
 .container-fluid{
 
-    padding: 3% 30%;
+    padding: 3% 15% ;
 }
+
 /* navigaion bar */
 
 #nav{
-    padding: 3% 15% 0 9%;
+    padding: 0 0  4.5rem;
     
 
 }
