--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 
 .detail{
+    padding-top:70px;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     color: white;
@@ -11,23 +12,20 @@
     line-height: 1.5;
 }
 #container-fluid{
-    padding: 3% 9%;
+    padding: 2% 15% ;
+}
+.container{
+    margin:-50px
 }
 
-.container-fluid{
-
-    padding: 3% 15% ;
-}
 /* navigaion bar */
 
 #nav{
-    padding: 0 -4px  4.5rem;
-    
-
+    padding: 0 0 2rem ;
 }
 
 #navbar-brand{
-   
+    
     font-size: 2.5rem;
     font-family:  'Ubuntu', sans-serif;
     font-weight: bold;
@@ -35,7 +33,7 @@
 }
 
 .nav-item{
-padding: 0 18px;    
+padding: 0 18px;
 }
 .nav-link{
     font-size:19px;
@@ -46,14 +44,16 @@ padding: 0 18px;
 /* download apple & Andriod buttons */
 .download-button{
     margin:5% 3% 5% 0;
-    
+
 }
 
 /* title image */
-#title-img{
-    padding-bottom: 5% ;
-    width: 60%;
+.title-img{
+    width: 70%;
     transform: rotate(25deg);
+    position: relative;
+    top: 100px;
+    
 
 }
 
@@ -61,13 +61,15 @@ padding: 0 18px;
 
 
 #features{
-    padding:7% 10% ;
-    
-    
+    padding:10% 15% ;
+    background-color:white;
+    position:  relative;
+   
+   
 }
 .feature-box{
     text-align:center;
-     
+
 }
 .icon {
     color:#ef8172;
@@ -98,7 +100,7 @@ padding: 0 18px;
     width:10%;
     border-radius: 100%;
     margin:1rem;
-    
+
 }
 
 /* Press */
@@ -116,4 +118,106 @@ padding: 0 18px;
 
 .carousel-item {
     padding: 7% 15%;
+}
+
+/* pricing */
+
+#pricing{
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-colum{
+    padding: 3% 2%;
+
+}
+.container-login{
+    padding:0 3% ;
+
+}
+.login-card-light {
+    background: linear-gradient(145deg, #eee, #fff);
+
+}
+
+                        /* Cards setting */
+
+
+
+ .card-body{
+ padding-top:30px ;
+     }
+  .card-data{
+                            
+    height: 500px;
+      }
+ .card-data-padding{
+     margin-top:50px ;
+   }
+ /* Width settings for mobile  */
+
+@media (max-width:991px){
+   
+    .title-img{
+        text-align: center;
+        padding:0 0  0 70px;
+        transform: none;
+        margin-bottom:12rem;
+        
+        
+    }
+    .container{
+        text-align: center;
+        
+    }
+}
+
+
+
+/* width setting for tablets */
+
+@media (min-width:768px) and (max-width:1000px){
+   
+    
+    .title-img{
+
+    text-align: center;
+    padding: 0 0 0 150px;
+    
+}
+}
+
+
+
+                              /* cta */
+#cta{
+background-color:#ff4c83;
+padding:70px  ;
+color: white;
+text-align:center;
+
+}
+
+.cta-heading{
+    font-family: 'Montserrat', sans-serif;
+font-size: 2rem;
+line-height: 1.5;
+font-weight:bold;
+}
+ /* footer */
+
+#footer{
+    padding: 7%;
+    text-align:center;
+}
+
+#footer-icons{ 
+   text-decoration: none;
+    padding:0 2% 5%;
+ 
+}
+
+.copyright{
+    letter-spacing: 8px ;
+    font-family: monospace;
 }
